# dewiki-wordrank

./: README.md  pyproject.toml
dewiki_wordrank/: __main__.py
